--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,8 +1,9 @@
-{
-  "rewrites": [
-    {
-      "source": "/*",
-      "destination": "/index.html"
-    }
-  ]
-}
+[build]
+  base = "frontend"
+  publish = "dist"
+  command = "npm install && npm run build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
