--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,8 +17,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Make entrypoint executable
+RUN chmod +x entrypoint.sh
+
 # Expose port
 EXPOSE 8000
 
-# Run the application with PORT environment variable
-CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}
+# Run the application with entrypoint script
+CMD ["./entrypoint.sh"]
