feat: Add Send Test, Cost Estimation, Budget Warnings, Pre-Send Confirmation, Undo Period & CORS fix
Features:
- Send Test button with dedicated test phone (+19097630454)
- Real-time Estimated Cost panel with SMS/MMS breakdown
- Budget Warning system (weekly/monthly/yearly limits)
- Pre-Send Confirmation modal with message preview
- 10-second Undo grace period for bulk sends
- Cost tracking with localStorage persistence

Fixes:
- CORS errors resolved by removing Content-Type header from GET requests
- Google Apps Script now works with automatic CORS headers

UI/UX:
- Larger login logo (3x size)
- Improved vertical centering on login page
- Production-ready branding updates

Technical:
- costTracker.ts for budget management
- Test phone configuration in .env
- Safety logging for test sends
- Auto-reset budgets on period boundaries

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,11 @@ TWILIO_AUTH_TOKEN=your_auth_token_32_chars_here
 TWILIO_PHONE_NUMBER=+1234567890
 TWILIO_WEBHOOK_URL=https://your-domain.com/api/webhooks/twilio
 
+# Test Phone Number (REQUIRED - for Send Test feature)
+# Phone number to receive test messages (include country code)
+# This ensures test messages ONLY go to this number, never to congregation
+VITE_TEST_PHONE=+19097630454
+
 # OpenAI Configuration (REQUIRED for AI features)
 # Get from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
